# notes.py

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
src/: actions.py  converter.py  logger.py  notes.py  utils.py  widgets.py
src/anotes/: actions.py  arguments.py  cli.py  config.py  converter.py  database.py  editting.py  logger.py  paths.py  server.py  template.py  utils.py  widgets.py
src/anotes/templates/: base.html  head.html  note.html  topic.html
