[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Anotes"
dynamic = ["version"]
description = "A file-agnostic notes manager"
readme = "README.md"
authors = [
    { name = "Abdulqadir Ahmad", email = "arfs6.mail@gmail.com" },
]
dependencies = [
    "jinja2",
    "peewee",
    "urwid",
]

[project.urls]
Repository = "https://github.com/arfs6/anotes"
"Bug Tracker"  = "https://github.com/arfs6/anotes/issues"

[project.scripts]
anotes = "anotes.cli:run"

[tool.hatch.version]
path = "src/anotes/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
